--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,5 +35,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="addBtnDescription" translatable="true">Add New Stock Symbol</string>
+    <string name="pref_symbols_list">symbols_list</string>
+    <string name="pref_symbols_last_updated">symbols_last_updated</string>
 
 </resources>
