add listview widget that works and get updated with each change in database...fixing some issue with symbols

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,5 +37,8 @@
     <string name="addBtnDescription" translatable="true">Add New Stock Symbol</string>
     <string name="pref_symbols_list">symbols_list</string>
     <string name="pref_symbols_last_updated">symbols_last_updated</string>
+    <string name="appwidget_text">EXAMPLE</string>
+    <string name="add_widget">Add widget</string>
+    <string name="empty_widget_text">No Stocks Available</string>
 
 </resources>
